charts/mediaserver/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app: transmission
        app.kubernetes.io/name: transmission
    spec:
      containers:
        - name: transmission
          image: "docker.io/linuxserver/transmission:2021.11.18"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 9091
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/transmission"
            - name: mediaserver-volume
              mountPath: "/downloads"
              subPath: "downloads"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: init-files-transmission
          configMap:
            defaultMode: 493
            name: init-transmission-cm
