charts/mediaserver/transmission/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: transmission.png
    gethomepage.dev/name: Transmission
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - transmission.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transmission-peer-tcp
          namespace: mediaserver
          port: 51413
